fix options menu tab to toggle menu on and off and turn menu off when blurred or clicked off of menu

--- a/css/options-menu.css
+++ b/css/options-menu.css
@@ -36,6 +36,7 @@
 
 .options-menu [data-open] i {
   transition: transform 0.3s ease-in-out;
+  pointer-events: none;
 }
 
 .options-menu [data-open],
